# MarkdownBookBuilder

./: .book.env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_GUIDE.md  MERGE_CHECKLIST.md  Markdown_Book_Builder_PRD.md  PLUGIN_DEVELOPMENT.md  PLUGIN_REGISTRY.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md  book.toml  pyproject.toml
.claude/plans/: phase-5-plan.md  phase-6-plan.md  phase-7-plan.md  phase-8-plan.md  phase-9-plan.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docs/: PLUGIN_REGISTRY_SPEC.md  testing.md
docs/adr/: 001-ast-centric-pipeline.md  002-technology-stack.md  003-plugin-architecture.md  004-deterministic-builds.md  005-configuration-strategy.md  006-plugin-registry-architecture.md  README.md
examples/sample-book/: README.md  book.toml  order.yaml
examples/sample-book/content/: 01-introduction.md  02-getting-started.md  03-chapter3.md  04-chapter4.md  05-chapter5.md  06-chapter6.md  07-chapter7.md  08-chapter8.md  09-chapter9.md  10-chapter10.md  11-chapter11.md  12-chapter12.md
examples/sample-book/output/: book.docx  book.epub  book.html
specs/001-project-foundation/: plan.md  research.md  spec.md  tasks.md
specs/001-project-foundation/checklists/: requirements.md
specs/005-pdf-formatting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-pdf-formatting/checklists/: requirements.md
specs/005-pdf-formatting/contracts/: book_toml_schema.md
src/markdown_book_builder/: __init__.py  __main__.py
src/markdown_book_builder/ast_/: __init__.py  models.py  transform.py
src/markdown_book_builder/cli/: __init__.py  build.py  config.py  images.py  init.py  main.py  validate.py
src/markdown_book_builder/config/: __init__.py  loader.py  models.py
src/markdown_book_builder/core/: errors.py  logging.py  types.py
src/markdown_book_builder/diagrams/: __init__.py  mermaid.py
src/markdown_book_builder/discovery/: __init__.py  builder.py  metadata.py  ordering.py  scanner.py  service.py
tests/: __init__.py  conftest.py
tests/benchmarks/: test_performance.py
tests/fixtures/: ast_samples.py  config_samples.py  discovery_samples.py  markdown_samples.py
tests/integration/: test_cli_build.py  test_cli_config.py  test_cli_init.py  test_cli_validate.py  test_error_scenarios.py  test_smoke.py
tests/unit/: test_ast_models.py  test_ast_serialization.py  test_ast_transform.py  test_config_formatting.py  test_diagrams_mermaid.py  test_discovery_builder.py  test_discovery_metadata.py  test_discovery_ordering.py  test_discovery_scanner.py  test_images_cache.py  test_images_detector.py  test_images_generator.py  test_images_service.py  test_plugins_diagram.py  test_plugins_external.py  test_plugins_registry.py  test_plugins_registry_unregister.py  test_rendering_docx.py  test_rendering_epub.py  test_rendering_html.py  test_rendering_pandoc.py  test_rendering_pandoc_base.py  test_themes_resolver.py
(+26 files in other folders)
