[project]
name = "markdown-book-builder"
version = "0.1.0"
description = "Developer-focused book processing pipeline that converts Markdown documents into professionally typeset books (PDFs)"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Aleksandr Mordanov", email = "aleksandr@example.com"}
]
keywords = ["markdown", "book", "pdf", "typst", "cli", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Office/Business",
]

dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "python-frontmatter>=1.0.0",
    "markdown-it-py>=3.0.0",
]

[project.optional-dependencies]
images = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-watch>=4.2.0",
    "pytest-xdist>=3.3.0",
    "syrupy>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
markdown-book-builder = "markdown_book_builder.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/markdown_book_builder/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "B", "A", "C4", "T10", "LOG", "RUF"]
ignore = ["E501", "UP040"]  # Line too long handled by formatter; UP040 for Python 3.13 compatibility

[tool.ruff.lint.isort]
known-first-party = ["markdown_book_builder"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_incomplete_stub = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests for core modules",
    "integration: Integration tests for pipeline stages",
    "contract: Contract/interface tests for CLI and public APIs",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src/markdown_book_builder"]
branch = true
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
skip_covered = false
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
